  * Fix menu still mentionning firefox 4
    - update debian/firefox-3.1.menu
  * Fix WM class for minefield
    - update debian/firefox-3.1-minefield.desktop
  * Fix the update-notifier script to really look for firefox-3.1
    - update debian/firefox-3.1-restart-required.update-notifier
  * Fix patch series after the rename of patch bz460917_*
    - update debian/patches/series

 -- Fabien Tassin <fta@ubuntu.com>  Mon, 22 Dec 2008 01:20:53 +0100

firefox-3.1 (3.1~b2+build1+nobinonly-0ubuntu1) jaunty; urgency=low

  New upstream release: 3.1 beta 2 from FIREFOX_3_1b2_BUILD1 (LP: #274187)

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Change appname and use a dedicated profile so 3.1 could run along with
    3.0 without locking/corrupting the profile. Initial 3.1 profile is
    cloned from 3.0 whenever possible.
    - update debian/firefox.sh.in
    - add debian/patches/firefox-profilename
    - add debian/patches/firefox-fsh
  * Use Shiretoko, codename for 3.1 instead of Granparadiso
    - rename debian/firefox-3.1-granparadiso.desktop => firefox-3.1-shiretoko.desktop
    - update debian/rules
  * Unset FORCE_OFFICIAL_BRANDING to return to minefield branding for
    intermediate snapshots and to Shiretoko branding for milestones
    - update debian/rules
  * Set MALLOC_OPTIONS=O before calling xulrunner during build. This is needed
    to avoid a dead-lock in jemalloc when running under fakeroot
    - update debian/rules
  * Drop system nspr/nss (until the soname work is stable)
    - update debian/rules
  * Update requirement for system sqlite3 to >= 3.6.0
    - update debian/rules
  * Add libasound2-dev to Build-Depends for the new HTML5 <video> tag
    - update debian/control
  * Drop dom-inspector, venkman and legacy firefox-{,trunk,granparadiso}
    packages
    - update debian/control
  * Resurrect the -dbg package, at least until bug 156575 is fixed
    - update debian/control
  * Update diverged patches: